--- a/styles/contact.css
+++ b/styles/contact.css
@@ -13,18 +13,18 @@
   --subtitle3-color: #F76C6C;
 } */
 
-* {
-  margin : 0;
-}
-
 body {
-  width: 100vw;
-  height: 100%;
+  /* width: 100vw; */
+  height: 100vh;
 }
 
 .container {
   display:flex;
   flex-direction: column;
+  width: 100%;
+}
+
+.nav-container {
   width: 100%;
 }
 
