--- a/styles/avis.css
+++ b/styles/avis.css
@@ -91,11 +91,31 @@ h1 {
     padding: 5px;
 }
 
+/*
 #submit {
     cursor: pointer;
     background-color: #f9c9c880;
     border-radius: 5px;
 }
+*/
+
+#submit {
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: #f9c9c880;
+    transition: 0.3s;
+    transform: scale(1);
+    font-size: 1.3rem;
+}
+
+#submit:hover {
+    transform: scale(1.2);
+    background-color: #F76C6C;
+    color: white;
+    box-shadow: 0px 0px 3px black;
+}
+
 /*
 footer {
     display: none;
