--- a/styles/avis.css
+++ b/styles/avis.css
@@ -17,6 +17,13 @@ h1 {
 
 /****** Comments */
 
+.opinions-rated {
+    display: none;
+    width: 100%;
+    height: 10vh;
+    border: 1px solid red;
+}
+
 /*** Comments Containers */
 .opinions-container {
     
@@ -36,7 +43,7 @@ h1 {
 
 /*** Append comment div */
 .unique-comment-container {
-    
+    background-color: none;
     width: 60%;
     position: relative;
     box-shadow: 0px 0px 3px black;
@@ -116,13 +123,9 @@ h1 {
     box-shadow: 0px 0px 3px black;
 }
 
-/*
-footer {
-    display: none;
-}
-*/
 
-@media screen and (min-width: 549px) {
+
+@media screen and (min-width: 680px) {
 
     h1 {
         height: 30vh;
@@ -130,14 +133,34 @@ footer {
         font-size: 4rem;
     }
 
+    .opinions-rated {
+        display: block;
+    }
+    
     .unique-comment-container {
-        margin: 25px;
+        background-color: white;
+        font-size: 2rem;
+        margin: 25px auto;
+        width: 90%;
+    }
+
+    .unique-comment-name {
+        font-weight: bold;
     }
 
     .add-opinion-container {
         transform: scale(1.5);
         margin-top: 100px;
         margin-bottom: 100px;
+    }
+
+    .unique-comment-name, .unique-comment-rating-gold, .unique-comment-message {
+        padding: 15px 0;
+    }
+
+    .even, .uneven {
+        float: none;
+        text-align: left;
     }
 
     textarea {
@@ -147,12 +170,6 @@ footer {
         margin: 0 auto;
     }
 
-   /* footer {
-        margin-bottom: -100vh;
-        position: absolute;
-        text-align: center;
-        display: block;
-    }*/
     footer {
         margin-bottom: -100vh;
     }
