--- a/styles/avis.css
+++ b/styles/avis.css
@@ -21,7 +21,14 @@ h1 {
     display: none;
     width: 100%;
     height: 10vh;
-    border: 1px solid red;
+    text-align: center;
+    line-height: 10vh;
+    font-size: 3rem;
+}
+
+.rating-gold {
+    color: gold;
+    text-shadow: 0px 0px 2px black;
 }
 
 /*** Comments Containers */
