--- a/styles/presentation.css
+++ b/styles/presentation.css
@@ -74,7 +74,8 @@
   }
   
   /* text and img */
-  
+
+
   .image-about {
     display: flex;
     justify-content: center;
@@ -105,11 +106,12 @@
 
   .space {
     padding: 15px;
-    margin: 15px;
+    margin: 30px;
   }
 
   .parag {
-    display: block;
+    display: flex;
+    justify-content: center space-around;
     line-height: 1.5;
     text-indent: 15px;
     margin: 1%;
@@ -123,9 +125,9 @@
  .parag:hover {
   background-color: #F9C9C8;
   font-size: 20px;
+  padding: 10px;
   border-radius: 12px;
  }
-
   
   /* NAVBAR */
   
