fixed syntax html

--- a/styles/presentation.css
+++ b/styles/presentation.css
@@ -92,9 +92,12 @@
     align-items: center;
   }
 
-  .image-resto {
+  .imageResto {
     width: 50%;
+    border-radius: 10%;
+    margin-right: 10px;
   }
+  
 
   .small-titles {
     display: block;
@@ -123,6 +126,7 @@
     border: 2px solid #F9C9C8;
     border-radius: 5px;
     padding: 10px
+    
   }
 
   
@@ -134,6 +138,8 @@
   padding: 10px;
   border-radius: 12px;
  }
+
+
 
 
 
