--- a/styles/presentation.css
+++ b/styles/presentation.css
@@ -86,18 +86,33 @@
   }
 
 
-.image-text {
+.image-texte-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-  .imageResto {
-    width: 50%;
-    margin-right: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-  }
+.parag {
+  line-height: 1.5;
+  text-indent: 15px;
+  margin: 10px;
+  font-size: 16px;
+  font-family: raleway , sans-serif;
+  color:  rgb(25, 25, 25);
+  width: 500px;
+  height: auto;
+  border: 2px solid #F9C9C8;
+  border-radius: 5px;
+  padding: 10px    
+}
+
+.imageResto {
+  width: 50%;
+  height: auto;
+  margin-right: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
   
 
 .small-titles {
@@ -115,21 +130,6 @@
   margin: 15px;
 }
 
-.parag {
-  line-height: 1.5;
-  text-indent: 15px;
-  margin: 10px;
-  font-size: 16px;
-  font-family: raleway , sans-serif;
-  color:  rgb(25, 25, 25);
-  width: 500px;
-  height: auto;
-  border: 2px solid #F9C9C8;
-  border-radius: 5px;
-  padding: 10px
-    
-}
-
   
   /* animations texte presentation */
 
@@ -144,7 +144,7 @@
 
 @media screen and (max-width: 680px) {
 
-  .image-text {
+  .image-texte-container {
     display: flex;
     flex-flow: column;
   }
@@ -155,6 +155,7 @@
 
   .parag {
     max-width: 680px;
+    margin-bottom: 20px;
   }
 
 }
