--- a/styles/emploi.css
+++ b/styles/emploi.css
@@ -32,19 +32,44 @@
   display:flex;
   justify-content: space-around;
   margin: 20px;
-  flex-direction: row;
   flex-wrap: wrap;
   }
 
 .valeurs {
   max-width:450px;
   max-height: 530px;
+  position: relative;
 }
 
-.flexbox1 img {
+
+
+.table-img {
   width:27vw;
   height:100%;
   border-radius: 15px;
+}
+
+.read-more {
+  font-weight: bold;
+  font-size: 36px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  cursor: pointer;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.opacity {
+  opacity: 0.5;
+}
+
+.visible {
+  visibility: visible;
+  opacity: 1;
 }
 
 .valeurs > p {
@@ -77,6 +102,7 @@ select {
   border-style:none;
   border-radius: 10px;
   cursor: pointer;
+  box-shadow: 1px 1px 1px #38424e;
     }
 
 option {
@@ -97,10 +123,13 @@ button {
   width: 120px;
   height: 50px;
   cursor: pointer;
+  box-shadow: 1px 1px 1px #38424e;
     }
 
 button:hover {
   color: #38424e;
+  transition: 0.3s;
+  transform: scale(1.1);
 }
 
 i {
@@ -169,9 +198,12 @@ input, label {
   cursor: pointer;
 }
 
+
+/*RESPONSIVE*/
+
 @media screen and (max-width: 700px) {
-  .flexbox1 img {
-    width: 90vw;
+  .table-img {
+    width: 80vw;
   }
 
   .modal {
