modif anim btn acceuil

--- a/styles/style.css
+++ b/styles/style.css
@@ -179,12 +179,14 @@ color: #fff;
   color: var(--nav-text-color);
   letter-spacing: 3px;
   font-weight: bold;
+  transition: filter 0.25s ease-out;
 }
 .nav-items-container li {
   list-style: none;
 }
 
-.nav-items-container a:hover, a:active {
+.nav-items-container a:hover, .nav-items-container a:active {
+  filter: invert(55%);
   text-decoration: underline;
 }
 
@@ -245,11 +247,13 @@ color: #fff;
     color: var(--nav-text-color);
     letter-spacing: 3px;
     font-weight: bold;
+    transition: filter 0.25s ease-out;
   }
   .nav-burger-item li {
     list-style: none;
   }
-  .nav-burger-item a:hover, a:active {
+  .nav-burger-item a:hover, .nav-burger-item a:active {
+    filter: invert(55%);
     text-decoration: underline;
   }
 
