--- a/styles/contact.css
+++ b/styles/contact.css
@@ -55,16 +55,42 @@ body {
   font-style: italic;
 }
 
-.main img {
+#contact-img {
   position: fixed;
   object-fit: cover;
   width: 100vw;
   z-index: -1;
   filter: invert(20%) sepia(50%) contrast(80%) blur(2px);
+  transition: filter 0.25s ease-out;
 }
 
 .img-filter-over {
   filter: invert(100%) sepia(50%) contrast(80%) blur(2px) !important;
+}
+
+/* Shy Racoon */
+
+#contact-racoon {
+  position: absolute;
+  width: 300px;
+  right: 3%;
+  top: 50%;
+  visibility: hidden;
+  transition: all 1s ease-in-out;
+  cursor: pointer;
+  z-index: -1;
+}
+
+.shy-racoon {
+  top: 22% !important;
+  visibility: visible !important;
+  z-index: 0 !important;
+}
+
+@media screen and (max-width: 780px) {
+  .shy-racoon {
+    top: 7% !important;
+  }
 }
 
 /* Adresse */
@@ -74,6 +100,7 @@ body {
   height: 30vh;
   background-color: var(--main-bg-color);
   color: var(--main-text-color);
+  z-index: 5;
 }
 
 .adress-container h2 {
@@ -125,6 +152,7 @@ body {
 .map {
   width: 100%;
   height: 30vh;
+  z-index: 5;
 }
 
 /* Formulaire de Contact*/
@@ -189,17 +217,6 @@ body {
   border: 1px solid var(--subtitle3-color);
   transition: all 0.25s ease-out;
 }
-
-/* .box-submit{
-  background-color: var(--subtitle3-color);
-} */
-
-/* .submit-active {
-  background-color: var(--main-bg-color);
-  color: var(--subtitle3-color);
-  border: 1px solid var(--subtitle3-color);
-  transform: translate(5px, -5px);
-} */
 
 
 .form-items input:focus:invalid, .form-items textarea:focus:invalid  {
