--- a/styles/reservation.css
+++ b/styles/reservation.css
@@ -94,7 +94,11 @@ h2, h3 {
     transform: scale(1.2);
     background-color: #F76C6C;
     color: white;
+   /*
     box-shadow: 0px 0px 3px black;
+    */
+    box-shadow: 10px 10px 20px #a1a0a0, 
+                -10px -10px 20px #d9d8d8;
 }
 
 .hand-icon {
@@ -125,6 +129,8 @@ a {
 
 .phone-number:hover {
     color: #F76C6C;
+    text-shadow: 10px 10px 20px #a1a0a0, 
+                -10px -10px 20px #d9d8d8;
 }
 
 .phone-icon {
