--- a/styles/reservation.css
+++ b/styles/reservation.css
@@ -50,11 +50,9 @@ h1 {
 }
 
 #reservation-global-container, #reservation-phone-container, #reservation-events-container {
-    /*width: 100%;*/
     margin: 0px auto;
     padding: 15px;
     text-align: center;
-    /* overflow-x: auto;  */
 }
 
 #reservation-global-container {
@@ -69,11 +67,13 @@ h2, h3 {
     display: block;
     margin: 30px auto;
     transform: scale(1.3);
+    border-radius: 15px;
 }
 
 .reservation-input-element > input, .reservation-input-element > select {
     padding: 10px;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 #reservation-number, #reservation-time {
@@ -83,7 +83,7 @@ h2, h3 {
 .reservation-button {
     cursor: pointer;
     padding: 15px;
-    border-radius: 5px;
+    border-radius: 15px;
     background-color: #f9c9c880;
     transition: 0.3s;
     transform: scale(1);
@@ -94,9 +94,6 @@ h2, h3 {
     transform: scale(1.2);
     background-color: #F76C6C;
     color: white;
-   /*
-    box-shadow: 0px 0px 3px black;
-    */
     box-shadow: 10px 10px 20px #a1a0a0, 
                 -10px -10px 20px #d9d8d8;
 }
@@ -150,7 +147,7 @@ a {
 }
 
 footer {
-    margin-bottom: -100vh;
+    position: relative;
 }
 
 @media screen and(min-width: 549px) {
@@ -161,9 +158,8 @@ footer {
         font-size: 4rem;
     }
 
-    #reservation-global-container {
-        /*display: flex;
-        justify-content: space-around;*/
+    #reservation-events-container {
+      margin-bottom: none;
     }
 
     .reservation-input-element {
