--- a/styles/style.css
+++ b/styles/style.css
@@ -172,7 +172,6 @@ color: #fff;
   justify-content: space-around;
   margin-right: 10px;
   width: 100%;
-  position: relative;
 }
 
 .nav-items-container a {
@@ -184,42 +183,58 @@ color: #fff;
 }
 .nav-items-container li {
   list-style: none;
-  transition:all 1s;
 }
 
-.item a::after, .item a::before {
-  content:" ";
-    width:10px;
-    height:10px;
-    position:absolute;
-    border :0px solid #fff;
-    transition:all 1s;
+.item {
+  position: relative;
+}
+
+.item a::after,
+.item a::before,
+.nav-burger-item a::after,
+.nav-burger-item a::before {
+  content:"";
+  width: 0;
+  position:absolute;
+  transition: width 1s;
 }
 .item a::after {
   top: -4px;
-  left: 4px;
-  border-top:5px solid black;
-  border-left:5px solid black;
+  left: 0px;
+  border-top:2px solid var(--nav-text-color);
 }
 .item a::before {
   bottom:-4px;
-  right: 4px;
-  border-bottom:5px solid black;
-  border-right:5px solid black;
-}
-.item a:hover::after, .item a:hover::before {
-  width: 98%;
-  height: 130%;
+  right: 0px;
+  border-bottom:2px solid var(--main-bg-color);
 }
 
-/* .nav-items-container a:hover, .nav-items-container a:active {
-  filter: invert(55%);
-  text-decoration: underline;
+.item a:hover::after,
+.item a:hover::before{
+  width: 50%;
 }
+
+.nav-burger-item a::after {
+  top: -5px;
+  left: 0px;
+  border-top:2px solid var(--nav-text-color);
+}
+
+.nav-burger-item a::before {
+  bottom: -5px;
+  right: 0px;
+  border-bottom:2px solid var(--nav-text-color);
+}
+
+.nav-burger-item a:hover::after,
+.nav-burger-item a:hover::before {
+  width: 50%;
+}
+
 
 .nav-active-color {
   filter: invert(55%)
-} */
+}
 
 /* NAV BURGER */
 
@@ -279,10 +294,6 @@ color: #fff;
   .nav-burger-item li {
     list-style: none;
   }
-  .nav-burger-item a:hover, .nav-burger-item a:active {
-    filter: invert(55%);
-    text-decoration: underline;
-  }
 
 /* Accueil */
 
@@ -327,10 +338,15 @@ color: #fff;
 .accueil-link {
   width: 25%;
   height: 75%;
-  border-radius: 3px;
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  border-radius: 15px;
+}
+
+.accueil-link:hover {
+  box-shadow: 10px 10px 20px #a1a0a0,
+              -10px -10px 20px #d9d9d8;
 }
 
 .link-box {
