--- a/styles/emploi.css
+++ b/styles/emploi.css
@@ -1,11 +1,10 @@
+ /*EMPLOI*/
 
-
-  /*EMPLOI*/
   h2 {
     font-size: 34px;
     font-weight: 500;
     font-family: raleway, sans-serif;
-    padding: 20px;
+    padding:90px;
     text-align: center;
     color:white;
     text-shadow: lightgray 1px 1px;
@@ -19,7 +18,7 @@
     font-family: montserrat, sans-serif;
     font-weight: 500;
     text-align: center;
-    padding: 20px;
+    padding: 30px;
     font-style: italic;
   }
 
@@ -29,35 +28,47 @@
   }
 
 .flexbox1 {
-  display:flex;
+  display: flex;
   justify-content: space-around;
-  margin: 20px;
+  margin-top: 20px;
   flex-wrap: wrap;
+  flex-direction: row;
+  padding: 10px;
   }
 
-.valeurs {
-  max-width:450px;
-  max-height: 530px;
-  position: relative;
+.valeurs > p {
+  width: 30vw;
+  max-height: 400px;
+  text-align: justify;
+  line-height: 35px;
+  font-family: montserrat, sans-serif;
+  margin-bottom: 20px;
 }
 
-
-
 .table-img {
-  width:27vw;
-  height:100%;
+  max-width: 25vw;
+  min-width: 25vw;
+  min-height: 60vh;
+  max-height: 60vh;
   border-radius: 15px;
 }
 
+.table-img:hover {
+  box-shadow:  10px 10px 20px #a1a0a0,
+    -10px -10px 20px #d9d8d8;
+}
+
+.valeurs {
+  position: relative;
+}
 .read-more {
   font-weight: bold;
-  font-size: 36px;
+  font-size: 25px;
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 10px;
   cursor: pointer;
   visibility: hidden;
   opacity: 0;
@@ -76,16 +87,6 @@
   visibility: visible;
   opacity: 1;
 }
-
-.valeurs > p {
-  max-width:400px;
-  max-height: 530px;
-  text-align: justify;
-  margin-bottom: 20px;
-  line-height: 25px;
-  vertical-align: middle;
-  padding-top:20px;
-  }
 
 .flexbox2 {
   display:flex;
@@ -108,6 +109,7 @@ select {
   border-radius: 10px;
   cursor: pointer;
   box-shadow: 1px 1px 1px #38424e;
+  margin-bottom: 50px;
     }
 
 option {
@@ -120,7 +122,6 @@ button {
   margin: 0 auto;
   font-size: 17px;
   font-weight: bold;
-  padding: 15px;
   background-color:#F76C6C ;
   color: #fff;
   border-style:none;
@@ -129,9 +130,16 @@ button {
   height: 50px;
   cursor: pointer;
   box-shadow: 1px 1px 1px #38424e;
+  margin-bottom: 50px;
     }
 
 button:hover {
+  color: #38424e;
+  transition: 0.3s;
+  transform: scale(1.1);
+}
+
+select:hover {
   color: #38424e;
   transition: 0.3s;
   transform: scale(1.1);
@@ -206,12 +214,52 @@ input, label {
 
 /*RESPONSIVE*/
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1200px) {
   .table-img {
-    width: 80vw;
+    min-width: 35vw;
+    max-width: 35vw;
   }
 
   .modal {
-    width: 100%;
+    width: 70%;
+  }
+
+  h2 {
+    padding: 10px;
+    }
+  
+  .flexbox1 {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .valeurs > p {
+    min-width: 60vh;
+    padding: 20px;
+    line-height: 20px;
+    padding-bottom: 30px;
+  }
+}
+
+
+@media screen and (max-width: 900px) {
+  .table-img {
+    min-width: 50vw;
+    max-width: 50vw;
+  }
+}
+
+
+@media screen and (max-width: 650px) {
+  .table-img {
+    min-width: 70vw;
+    max-width: 70vw;
+  }
+
+  .valeurs > p {
+    min-width: 60vh;
+    padding: 20px;
+    line-height: 20px;
+    padding-bottom: 30px;
   }
 }
