--- a/styles/presentation.css
+++ b/styles/presentation.css
@@ -1,11 +1,12 @@
 /* Banner */
 
 #galleryHeader {
-  width: 100vw;
-  z-index: 2;
+  width: 100%;
+  height: 30vh;
 }
 
-#galleryBanner  img {
+
+#galleryBanner img {
   width: 100%;
   object-fit: cover;
   height: 30vh; 
@@ -50,6 +51,7 @@
   height: auto;
   margin-right: 10px;
   border-radius: 15px;
+  margin: 10px;
   }
 
 
