--- a/styles/emploi.css
+++ b/styles/emploi.css
@@ -1,35 +1,36 @@
  /*EMPLOI*/
 
- .banner {
+.banner {
     height: 30vh;
     background: url('../ressources/banner-emploi.jpg') center/cover;
- }
+    opacity: 0.85;
+}
 
-  h2 {
-    font-size: 34px;
-    font-weight: 500;
-    font-family: raleway, sans-serif;
-    text-align: center;
-    color:white;
-    text-shadow:black 2px 2px;
-    font-style: italic;
-    padding-top: 80px;
-  }
+h2 {
+  font-size: 34px;
+  font-weight: 500;
+  font-family: raleway, sans-serif;
+  text-align: center;
+  color:white;
+  text-shadow:black 2px 2px;
+  font-style: italic;
+  padding-top: 80px;
+}
   
-  h3 {
-    font-size: 24px;
-    font-family: montserrat, sans-serif;
-    font-weight: 500;
-    text-align: center;
-    padding: 30px;
-    font-style: italic;
-  }
+h3 {
+  font-size: 24px;
+  font-family: montserrat, sans-serif;
+  font-weight: 500;
+  text-align: center;
+  padding: 30px;
+  font-style: italic;
+}
 
-  h4 {
-    text-align: center;
-    font-family: raleway, sans-serif;
-  }
+h4 {
+  text-align: center;
+  font-family: raleway, sans-serif;
 
+}
 .flexbox1 {
   display: flex;
   justify-content: space-around;
@@ -220,7 +221,6 @@ input, label {
 /*RESPONSIVE*/
 
 @media screen and (max-width: 1200px) {
- 
   .table-img {
     min-width: 30vw;
     max-width: 30vw;
