--- a/styles/presentation.css
+++ b/styles/presentation.css
@@ -20,7 +20,7 @@
 
 
 /* text and img */
-
+/*
 .title-main {
   display: block;
   text-align: center;
@@ -29,7 +29,7 @@
   font-family: montserrat, sans-serif;
   font-weight: 500;
   padding: 20px;
-  }
+  }  */
 
 
 .image-texte-container {
@@ -77,7 +77,7 @@
 
 footer {
  position: relative;
- margin-bottom: -185vh;
+ margin-bottom: -180vh;
 }
 
   
@@ -105,6 +105,10 @@ footer {
 /* presentation responsive */
 
 @media screen and (max-width: 680px) {
+
+  #galleryHeader h1:hover {
+    width: auto;
+  }
 
   .image-texte-container {
     display: flex;
