--- a/styles/style.css
+++ b/styles/style.css
@@ -176,6 +176,7 @@ color: #fff;
   font-size: 7vw;
   font-style: italic;
   font-family: "Montserrat", sans-serif;
+  text-shadow: 1px 1px 2px #a1a0a0;
 }
 
 .sub-title {
