--- a/styles/galerie.css
+++ b/styles/galerie.css
@@ -226,6 +226,7 @@ footer {
         padding: 4vh 0vh;
     }
     #gallery h5 {
-        font-size: 110%;
+        font-size: 80%;
+        padding: 5px;
     }
 }
